--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,10 +2,10 @@ use_frameworks!
 
 platform :ios, '9.0'
 
-target 'CGTools_Example' do
-  pod 'CGTools', :path => '../'
+target 'CGTestTools_Example' do
+  pod 'CGTestTools', :path => '../'
 
-  target 'CGTools_Tests' do
+  target 'CGTestTools_Tests' do
     inherit! :search_paths
 
     pod 'FBSnapshotTestCase'
